Cleanup compilation warnings, mainly deprecated JDK methods